# ouro-agents

./: .gitignore  README.md  apollo.json  athena.json  config.example.json  config.json  ecosystem.config.cjs  hermes.json  plan.md  pyproject.toml  test_tc.py
notes/: AUDIT.md
ouro_agents/: __init__.py  agent.py  artifacts.py  classify.py  config.py  constants.py  display.py  events.py  heartbeat.py  logging_config.py  notes.py  observer.py  planning.py  platform_context_prompt.py  provenance.py  publisher.py  refinement.py  runner.py  scheduler.py  server.py  skills.py  smolagents_patches.py  soul.py  teams.py  tool_prompt.py  usage.py  uuid_v7.py
ouro_agents/debug/: chat-prompt-2026-03-05.md  context-managment-feedback.md
ouro_agents/memory/: __init__.py  consolidation.py  context_loader.py  conversation_state.py  mem0.py  ouro_docs.py  reflection.py  retrieval.py  tools.py  user_model.py  workspace_sync.py
ouro_agents/modes/: __init__.py  framing.py  heartbeat.py  planning.py  profiles.py
ouro_agents/skills/: __init__.py  asset_output.md  benchmarking.md  filesystem.md  ouro.md  ouro_markdown.md  ouro_py.md  python.md  screening-campaigns.md  working-memory.md
ouro_agents/subagents/: __init__.py  context.py  delegate_utils.py  preflight.py  profiles.py  prompts.py  reflector.py  research.py  runner.py
ouro_agents/tools/: agent_base.py  mcp_tools.py  python_tool.py  scheduler_tools.py  skills_tools.py
ouro_agents/tui/: __init__.py  review_picker.py  team_picker.py
ouro_agents/utils/: __init__.py  callbacks.py  conversation.py  debug.py  message_persistence.py  streaming.py
tests/: test_artifacts.py  test_config.py  test_events.py  test_heartbeat_prompting.py  test_model_provider_overrides.py  test_ouro_docs.py  test_planning_markdown.py  test_provenance.py  test_python_tool.py  test_reflection.py  test_review_picker.py  test_subagent_prompting.py  test_team_picker.py  test_tool_call_parsing.py  test_tool_prompt.py  test_usage_reasoning.py  test_workspace_sync.py
workspace/: HEARTBEAT.md  NOTES.md  SOUL.md
workspace/skills/: python.md  (+2 more)
(+1 files in other folders)
